unpackaged/main/default/objects/Brand_Allocation__c/Brand_Allocation__c.object-meta.xml
<CustomObject>
    <description>SB-MC-SB-10 To maintain Brand Allocations</description>
    <label>Brand Allocation</label>
    <nameField>
        <label>Brand Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>