unpackaged/main/default/objects/Brand_Allocation__c/fields/Allocation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_End_Date__c</fullName>
    <label>Allocation End Date</label>
    <type>Date</type>
</CustomField>