unpackaged/main/default/objects/Brand_Allocation__c/fields/Allocation_Per_Interval__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Per_Interval__c</fullName>
    <description>SB-MC-SB-10 To maintain quantity of Barrels allocated per interval</description>
    <label>Allocation Per Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>