unpackaged/main/default/objects/Brand_Allocation__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB-MC-SB-10 To maintain relationship with Brand</description>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Brand you have selected is Inactive.</errorMessage>
        <filterItems>
            <field>Brand__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Brand Allocations</relationshipLabel>
    <relationshipName>Brand_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>