unpackaged/main/default/objects/Brand_Allocation__c/fields/Carry_Forward_Barrels__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Barrels__c</fullName>
    <description>SB-MC-SB-10 To maintain unit of Barrels that we will carry forward for next time interval</description>
    <label>Carry Forward Barrels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>