unpackaged/main/default/objects/Brand_Allocation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SB-MC-SB-10 This is to maintain that record will be active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>