unpackaged/main/default/objects/Brand_Allocation__c/fields/Is_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Is_Carry_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SB-MC-SB-10 To maintain that if we want to allow carry forward in allocation or not</description>
    <label>Is Carry Forward</label>
    <type>Checkbox</type>
</CustomField>