unpackaged/main/default/objects/Brand_Allocation__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>SB-MC-SB-10 To maintain program type for Brand</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Kit</fullName>
            </value>
            <value>
                <fullName>Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Trip and Tour</fullName>
            </value>
            <value>
                <fullName>Sample Kit + Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Remote Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>