unpackaged/main/default/objects/Brand_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Brand__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Time_Period__c</columns>
    <columns>Time_Interval__c</columns>
    <columns>Year_Of_Allocation__c</columns>
    <columns>Allocation_Per_Interval__c</columns>
    <columns>Used_Allocations_Per_Interval__c</columns>
    <columns>Is_Carry_Forward__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>