unpackaged/main/default/objects/Brand_Allocation__c/listViews/El_Tesoro_SB_Brand_Allocation.listView-meta.xml
<ListView>
    <fullName>El_Tesoro_SB_Brand_Allocation</fullName>
    <filterScope>Queue</filterScope>
    <label>El Tesoro SB</label>
    <queue>El_Tesoro_SB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>