unpackaged/main/default/objects/Brand_Allocation__c/listViews/Knob_Creek_Bourbon_Brand_Allocation.listView-meta.xml
<ListView>
    <fullName>Knob_Creek_Bourbon_Brand_Allocation</fullName>
    <filterScope>Queue</filterScope>
    <label>Knob Creek Bourbon</label>
    <queue>Knob_Creek_Bourbon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>